@@ -20,3 +20,5 @@ Release 1.0 Start 21/05/2020
 - 18/10/2020
 11. alloc_re.c: fix overwriting unallocate memory location when
     new_size < old_size
+- 22/10/2020
+12. Remove definition of INSTALL program in configure.ac, Makefile.am
